# data-notebooks

./: .github.dependabot.yaml  .gitignore  README.md  pyproject.toml
.github/workflows/: ci-test.yml
notebooks/: Allergens.ipynb  jugement_majoritaire.ipynb  wordle.ipynb
scripts/: test_utils.py
scripts/jugement_majoritaire/: utils.py
workflows/: ci.yaml
