[tool.poetry]
name = "data-notebooks"
version = "0.1.0"
description = "Base Python env to develop data science notebooks, managed by Poetry" 
authors = ["Baptiste Belescot <bbelescot@me.com>"]

packages = [
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.4.0"
pyforest = "^1.1.0"
pandas = "^1.4.2"
numpy = "^1.22.3"
black = {extras = ["jupyter"], version = "^22.3.0"}
pytest = "^7.1.2"
plotly = "^5.7.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
pre-commit = "^2.18.1"
jupyterlab-code-formatter = "^1.4.10"
emoji = "^1.7.0"
Unidecode = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
